[gd_scene load_steps=60 format=3 uid="uid://cmqvg1yjso6rn"]

[ext_resource type="FontFile" uid="uid://csvoyclvx65d2" path="res://assets/fonts/LilitaOne-Regular.ttf" id="1_fik03"]
[ext_resource type="Script" path="res://scripts/menus/menu_cards.gd" id="1_m3354"]
[ext_resource type="Texture2D" uid="uid://d2x6o0q1lagp8" path="res://assets/ui/cards/Card_Boost.png" id="2_64m0k"]
[ext_resource type="Texture2D" uid="uid://dk4numgl1jkdp" path="res://assets/ui/cards/Card_Boost_Jetfuel.png" id="3_gcqrq"]
[ext_resource type="Texture2D" uid="uid://d3cahpp0u236q" path="res://assets/ui/cards/Card_Bubble.png" id="4_61jxa"]
[ext_resource type="Texture2D" uid="uid://cqckvgx1847pe" path="res://assets/ui/cards/Card_Bubble_Airtime.png" id="5_mlog8"]
[ext_resource type="Texture2D" uid="uid://dxaatmgcixmhu" path="res://assets/ui/cards/Card_Bubble_Gurgle.png" id="6_2b5gh"]
[ext_resource type="Texture2D" uid="uid://c4i7g3yheo8r4" path="res://assets/ui/cards/Card_Radiation.png" id="7_jcvjp"]
[ext_resource type="Texture2D" uid="uid://dnv2g4a6hke8b" path="res://assets/ui/cards/Card_Spitfire.png" id="8_6ecgm"]
[ext_resource type="Texture2D" uid="uid://6hi17h4nu3yr" path="res://assets/ui/cards/Card_Spitfire_Piercing.png" id="9_eivkd"]
[ext_resource type="Texture2D" uid="uid://clnd5tq3brvpq" path="res://assets/ui/cards/Card_Spitfire_Spew.png" id="10_7wgnr"]
[ext_resource type="Texture2D" uid="uid://kgpl7ida7gg5" path="res://assets/ui/cards/Card_Spitfire_Upchuck.png" id="11_x6ije"]
[ext_resource type="Texture2D" uid="uid://dvg5oc3axuiqe" path="res://assets/particle/Circle1.png" id="13_bw8ex"]

[sub_resource type="Gradient" id="Gradient_gxl6y"]
colors = PackedColorArray(0.00392157, 0.00392157, 0.00392157, 1, 0.0338533, 0.0338533, 0.0338533, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lduy4"]
light_mode = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tidti"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ktuqn"]
texture = ExtResource("2_64m0k")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_31i4w"]
texture = ExtResource("2_64m0k")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hm2mf"]
texture = ExtResource("2_64m0k")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_ujgxb"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_ktuqn")
Button/styles/normal = SubResource("StyleBoxTexture_31i4w")
Button/styles/pressed = SubResource("StyleBoxTexture_hm2mf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_do3c0"]
texture = ExtResource("3_gcqrq")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y5rvt"]
texture = ExtResource("3_gcqrq")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ksohb"]
texture = ExtResource("3_gcqrq")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_2oqir"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_do3c0")
Button/styles/normal = SubResource("StyleBoxTexture_y5rvt")
Button/styles/pressed = SubResource("StyleBoxTexture_ksohb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8op0l"]
texture = ExtResource("4_61jxa")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_26hg4"]
texture = ExtResource("4_61jxa")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qmfpb"]
texture = ExtResource("4_61jxa")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_4xyx1"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_8op0l")
Button/styles/normal = SubResource("StyleBoxTexture_26hg4")
Button/styles/pressed = SubResource("StyleBoxTexture_qmfpb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wjfdc"]
texture = ExtResource("5_mlog8")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2sy38"]
texture = ExtResource("5_mlog8")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q5tpu"]
texture = ExtResource("5_mlog8")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_5p5to"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_wjfdc")
Button/styles/normal = SubResource("StyleBoxTexture_2sy38")
Button/styles/pressed = SubResource("StyleBoxTexture_q5tpu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yj2un"]
texture = ExtResource("6_2b5gh")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_grnih"]
texture = ExtResource("6_2b5gh")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_abyqp"]
texture = ExtResource("6_2b5gh")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_3jk2t"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_yj2un")
Button/styles/normal = SubResource("StyleBoxTexture_grnih")
Button/styles/pressed = SubResource("StyleBoxTexture_abyqp")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0qgvf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6q8lx"]
texture = ExtResource("7_jcvjp")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nfwhe"]
texture = ExtResource("7_jcvjp")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_liif1"]
texture = ExtResource("7_jcvjp")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_411cu"]
Button/styles/focus = SubResource("StyleBoxEmpty_0qgvf")
Button/styles/hover = SubResource("StyleBoxTexture_6q8lx")
Button/styles/normal = SubResource("StyleBoxTexture_nfwhe")
Button/styles/pressed = SubResource("StyleBoxTexture_liif1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6tn8x"]
texture = ExtResource("8_6ecgm")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_08gdh"]
texture = ExtResource("8_6ecgm")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qenua"]
texture = ExtResource("8_6ecgm")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_ucrvl"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_6tn8x")
Button/styles/normal = SubResource("StyleBoxTexture_08gdh")
Button/styles/pressed = SubResource("StyleBoxTexture_qenua")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hl07e"]
texture = ExtResource("9_eivkd")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6fdfx"]
texture = ExtResource("9_eivkd")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_350vl"]
texture = ExtResource("9_eivkd")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_qqqdh"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_hl07e")
Button/styles/normal = SubResource("StyleBoxTexture_6fdfx")
Button/styles/pressed = SubResource("StyleBoxTexture_350vl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sf1hd"]
texture = ExtResource("10_7wgnr")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b0ebh"]
texture = ExtResource("10_7wgnr")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_11vi2"]
texture = ExtResource("10_7wgnr")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_qpi0i"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_sf1hd")
Button/styles/normal = SubResource("StyleBoxTexture_b0ebh")
Button/styles/pressed = SubResource("StyleBoxTexture_11vi2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gnqkc"]
texture = ExtResource("11_x6ije")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.866667, 0.215686, 0.270588, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_av56w"]
texture = ExtResource("11_x6ije")
texture_margin_left = 400.0
texture_margin_top = 600.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7dsxc"]
texture = ExtResource("11_x6ije")
texture_margin_left = 400.0
texture_margin_top = 600.0
modulate_color = Color(0.447059, 0.109804, 0.184314, 1)

[sub_resource type="Theme" id="Theme_2sh0c"]
Button/styles/focus = SubResource("StyleBoxEmpty_tidti")
Button/styles/hover = SubResource("StyleBoxTexture_gnqkc")
Button/styles/normal = SubResource("StyleBoxTexture_av56w")
Button/styles/pressed = SubResource("StyleBoxTexture_7dsxc")

[sub_resource type="Gradient" id="Gradient_3ut48"]
offsets = PackedFloat32Array(0, 0.7, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_llfic"]
gradient = SubResource("Gradient_3ut48")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.981651, 0.0137615)

[node name="Menu_Cards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3354")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Rain" type="CPUParticles2D" parent="."]
position = Vector2(960, -96)
amount = 500
lifetime = 15.0
preprocess = 15.0
texture = ExtResource("13_bw8ex")
emission_shape = 3
emission_rect_extents = Vector2(1080, 0)
gravity = Vector2(0, 20)
angular_velocity_min = 50.0
angular_velocity_max = 50.0
orbit_velocity_min = -0.01
orbit_velocity_max = 0.01
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_initial_ramp = SubResource("Gradient_gxl6y")

[node name="MouseStopRect" type="ColorRect" parent="."]
z_index = 100
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
color = Color(1, 1, 1, 0)

[node name="Cards_MC" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 0

[node name="Levelup_VBox1" type="VBoxContainer" parent="Cards_MC"]
layout_mode = 2

[node name="LevelUp_VBox2" type="VBoxContainer" parent="Cards_MC/Levelup_VBox1"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Header_VBox" type="VBoxContainer" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2"]
layout_mode = 2
theme_override_constants/separation = -25

[node name="Header1_Label" type="Label" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Header_VBox"]
material = SubResource("CanvasItemMaterial_lduy4")
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fik03")
theme_override_font_sizes/font_size = 150
text = "LEVEL UP"
horizontal_alignment = 1

[node name="Header1_Label2" type="Label" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Header_VBox"]
material = SubResource("CanvasItemMaterial_lduy4")
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fik03")
theme_override_font_sizes/font_size = 50
text = "CHOOSE A SINGLE UPGRADE"
horizontal_alignment = 1

[node name="Card_Hbox" type="HBoxContainer" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2"]
layout_mode = 2
theme_override_constants/separation = 45
alignment = 1

[node name="Card_Boost" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_ujgxb")

[node name="Card_Boost_Jetfuel" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_2oqir")

[node name="Card_Bubble" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_4xyx1")

[node name="Card_Bubble_Airtime" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_5p5to")

[node name="Card_Bubble_Gurgle" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_3jk2t")

[node name="Card_Radiation" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_411cu")

[node name="Card_Spitfire" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_ucrvl")

[node name="Card_Spitfire_Piercing" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_qqqdh")

[node name="Card_Spitfire_Spew" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_qpi0i")

[node name="Card_Spitfire_Upchuck" type="Button" parent="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox"]
visible = false
layout_mode = 2
theme = SubResource("Theme_2sh0c")

[node name="AP" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
blend_mode = 1

[node name="Left_PointLight2D" type="PointLight2D" parent="."]
position = Vector2(512, 598.52)
scale = Vector2(7, 11.31)
texture = SubResource("GradientTexture2D_llfic")

[node name="Mid_PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(956, 598.52)
scale = Vector2(7, 11.31)
texture = SubResource("GradientTexture2D_llfic")

[node name="Right_PointLight2D3" type="PointLight2D" parent="."]
position = Vector2(1403, 598.52)
scale = Vector2(7, 11.31)
texture = SubResource("GradientTexture2D_llfic")

[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Boost" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Boost" to="." method="_on_card_boost_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Boost_Jetfuel" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Boost_Jetfuel" to="." method="_on_card_boost_jetfuel_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Bubble" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Bubble" to="." method="_on_card_bubble_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Bubble_Airtime" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Bubble_Airtime" to="." method="_on_card_bubble_airtime_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Bubble_Gurgle" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Bubble_Gurgle" to="." method="_on_card_bubble_gurgle_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Radiation" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Radiation" to="." method="_on_card_radiation_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire" to="." method="_on_card_spitfire_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire_Piercing" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire_Piercing" to="." method="_on_card_spitfire_piercing_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire_Spew" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire_Spew" to="." method="_on_card_spitfire_spew_pressed"]
[connection signal="mouse_entered" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire_Upchuck" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Cards_MC/Levelup_VBox1/LevelUp_VBox2/Card_Hbox/Card_Spitfire_Upchuck" to="." method="_on_card_spitfire_upchuck_pressed"]
